# remote

./: .gitignore  .readthedocs.yaml  AGENTS.md  README.md  api_gen.py  cleanup.sh  conftest.py  demo_train.py  fix_pulumi.py  pr-description.md  pyproject.toml  requirements.txt  run_gke_example.sh  run_minimal_test.sh  setup.sh
.gemini/: styleguide.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: e2e-tests.yaml  lint.yaml  pr-contributor-terms.yml  tests.yaml
docs/: accelerators.md  advanced.rst  api.rst  architecture.md  cli.rst  code-of-conduct.md  conf.py  configuration.md  contributing.md  examples.md  getting_started.md  index.rst  troubleshooting.md  usage.md
docs/_static/: custom.css
docs/advanced/: async_jobs.md  batched_jobs.md  clusters.md  collections.md  containers.md  reservations.md
docs/examples/: example_async_jobs.md  example_checkpoint.md  example_collections.md  example_data_api.md  example_gke.md  example_keras_checkpoint.md  fashion_mnist.md  gemma3_sft_demo.md  gemma4_finetuning.md  gemma_sft_pathways_distributed.md  jax_training.md  keras_training.md  pathways_example.md  pytorch_training.md  simple_demo.md  slime_post_training.md  tunix_grpo.md  tunix_sft.md  verl_rl.md
docs/guides/: async_jobs.md  checkpointing.md  clusters.md  configuration.md  containers.md  cost_optimization.md  data.md  debugging.md  dependencies.md  distributed_training.md  env_vars.md  examples.md  execution_modes.md  faq.md  gemma4_finetuning.md  keras_training.md  llm_finetuning.md  profiles.md  pytorch_training.md  reservations.md  tunix_sft.py  vllm_tpu.md
examples/: demo_train.py  example_checkpoint.py  example_collections.py  example_data_api.py  example_fuse.py  example_gke.py  example_keras_checkpoint.py  example_vertex_ai.py  fashion_mnist.py  gemma3_sft_demo.py  gemma_sft_pathways_distributed.py  hf_dataset_demo.py  pathways_example.py  simple_demo.py  slime_post_training.py  tunix_grpo.py  tunix_sft.py  verl_rl.py
keras_remote/: Dockerfile.template  __init__.py  accelerators.py  conftest.py  constants.py  container_builder.py  core.py  credentials.py  credentials_test.py  data.py  data_test.py  execution.py  gke_client.py  infra.py  packager.py  remote_runner.py  storage.py  test_constants.py  test_utils.py  vertex_ai_client.py
keras_remote/api/: __init__.py
keras_remote/backend/: execution.py  execution_test.py  gke_client.py  gke_client_test.py  log_streaming.py  log_streaming_test.py  pathways_client.py  pathways_client_test.py  test_execution.py  test_gke_client.py
keras_remote/cli/: config.py  constants.py  main.py  options.py  output.py  output_test.py  prerequisites.py  prerequisites_check.py  prerequisites_check_test.py  prompts.py  test_prerequisites_check.py
keras_remote/core/: accelerators.py  accelerators_test.py  core.py  core_test.py  test_accelerators.py  test_core.py
keras_remote/data/: data.py  data_test.py
keras_remote/examples/: example_gke.py  example_vertex_ai.py  gemma3_sft_demo.py
keras_remote/infra/: container_builder.py  container_builder_test.py  infra.py  test_container_builder.py
keras_remote/runner/: remote_runner.py  remote_runner_test.py  test_remote_runner.py
keras_remote/src/: api_export.py
keras_remote/utils/: packager.py  storage.py  (+4 more)
kinetic/: Dockerfile.template  __init__.py  collections.py  collections_helpers.py  collections_helpers_test.py  collections_test.py  constants.py  constants_test.py  credentials.py  credentials_test.py  debug.py  jobs.py  jobs_test.py
shell/: api_gen.sh
tests/: conftest.py
(+108 files in other folders)
