[project]
name = "keras-remote"
version = "0.0.1"
authors = [
    {name = "Keras team", email = "keras-users@googlegroups.com"},
]
description = "Run Keras models remotely on TPU seamlessly."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "cloudpickle",
    "numpy",
    "keras",
    "google-cloud-storage>=2.16.0",
    "google-cloud-build>=3.24.0",
    "kubernetes>=28.1.0",
]

[project.optional-dependencies]
cli = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pulumi>=3.0.0",
    "pulumi-gcp>=7.0.0",
    "pulumi-command>=1.0.0",
    "google-cloud-tpu>=1.0.0",
]
demo = [
    "jax",
    "keras",
    "numpy",
    "keras-hub",
]

[project.scripts]
keras-remote = "keras_remote.cli.main:cli"

[project.urls]
Homepage = "https://github.com/keras-team/keras-remote"
Issues = "https://github.com/keras-team/keras-remote/issues"

[build-system]
requires = [
    "build",
    "hatchling >= 1.26",
    "twine",
]
build-backend = "hatchling.build"
